fixed resume modal on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,14 @@ br {
   .about-development h2 {
     font-size: 1.5em;
   }
+
+  .modal-body {
+    padding: 0;
+  }
+
+  #modal-frame {
+    padding: 0;
+  }
   
   /*work*/
   .img-left {
